log
Fri, Apr 18, 2025  5:53:39 PM: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  1|5
total_score: 10/70
eeef3b7
Fri, Apr 18, 2025  6:01:59 PM: 
 hashmap.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  5|4
total_score: 30/70
6458d44
Fri, Apr 18, 2025  6:09:11 PM: 
 hashmap.c | 15 +++++++++++----
 1 file changed, 11 insertions(+), 4 deletions(-)
 tests:  8|3
total_score: 40/70
4499124
Fri, Apr 18, 2025  6:11:54 PM: 
 hashmap.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'eraseMap':
hashmap.c:94:9: error: 'pair' undeclared (first use in this function)
     if (pair == NULL) return;
         ^~~~
hashmap.c:94:9: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:92:11: error: unused variable 'par' [-Werror=unused-variable]
     Pair *par = searchMap(map, key);
           ^~~
cc1.exe: all warnings being treated as errors
5295a1e
Fri, Apr 18, 2025  6:12:11 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
fc20421
Fri, Apr 18, 2025  6:21:54 PM: 
 hashmap.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
3bacdeb
Fri, Apr 18, 2025  6:22:47 PM: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'nextMap':
hashmap.c:116:12: error: 'bucket' undeclared (first use in this function)
     return bucket[2]-> value;
            ^~~~~~
hashmap.c:116:12: note: each undeclared identifier is reported only once for each function it appears in
hashmap.c:117:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
f4fd3ef
Fri, Apr 18, 2025  6:24:27 PM: 
 hashmap.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  16|1
total_score: 60/70
5b2056d
